--- a/css/style.css
+++ b/css/style.css
@@ -140,10 +140,11 @@ mobile: 480px in giù
 
 @media screen and (max-width: 1160px) {
     .container {
-        max-width: 750px;
+        max-width: 1140px;
+        width: 100%;
         margin: 0 auto;
         padding: 0 20px;
-    }
+     }
     .col.col-left{
         display: flex;
     }
